--- a/style.css
+++ b/style.css
@@ -10,17 +10,21 @@
 }
 header {
     background-color: brown;
-    color: black;
+    font-size: 25px;
 }
 h1 {
+    color: black;
+}
+h2, h3, h4, h5, h6 {
     color: azure;
 }
-h2 {
-    color: azure;
+h6 {
+    background-color: black;
+    font-size: 20px;
+}
+form {
+background-color: black;
 }
 p {
-    color: azure;
-}
-h3 {
     color: azure;
 }
