--- a/style.css
+++ b/style.css
@@ -93,13 +93,17 @@ main > section {
 }
 
 main > section > h3 {
+    margin: 0;
+    padding: 0;
 	flex: 0 0 15%;
 	text-align: left;
-	font-size: 2rem;
+	font-size: 1.5rem;
+    display: flex;
+	flex-wrap: wrap;
 }
 
 main > section p {
-	font-size: 2rem;
+	font-size: 1.5rem;
 }
 
 main > section > div {
@@ -119,7 +123,7 @@ main > section > div {
 }
 
 #work {
-	flex: 1 1 auto;
+	flex: 0 1 auto;
 	display: flex;
 	align-items: center;
 }
@@ -186,10 +190,8 @@ main > section > div {
 }
 
 footer {
-	flex: 0 1 auto;
-	font-size: 25px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-    margin-bottom: 20px;
+	text-align: center;
+    white-space: nowrap;
+    font-size: 1rem;
+    margin-top: 5rem;
 }
