--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,18 @@ footer {
   
 @media only screen and (max-width: 767px) {
     body {
+        min-height: 100vh;
+        background-image: url('../images/genjutsu.gif');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         font-size: 14px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande','Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        background-attachment: fixed;
+        overflow-x: auto;
     }
 
     .header {
@@ -352,7 +363,18 @@ footer {
 
 @media only screen and (min-width: 768px) {
     body {
+        min-height: 100vh;
+        background-image: url('../images/genjutsu.gif');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
         font-size: 16px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande','Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+        background-attachment: fixed;
+        overflow-x: auto;
     }
 
     .header {
