--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ body {
 	min-height: 100vh;
 	background-image: url('../images/genjutsu.gif');
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
 	background-position: center;
+    background-attachment: fixed;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande','Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	display: flex;
 	flex-direction: column;
     overflow-y: scroll;
-    background-attachment: fixed;
 	overflow-x: auto;
 }
 
@@ -294,16 +294,17 @@ footer {
 @media only screen and (max-width: 767px) {
     body {
         min-height: 100vh;
-        background-image: url('../images/genjutsu.gif');
+        background-color: black;
+        background-image: url('../images/sky.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+        background-attachment: fixed;
         font-size: 14px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande','Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
-        background-attachment: fixed;
         overflow-x: auto;
     }
 
@@ -313,6 +314,7 @@ footer {
         justify-content: center;
         text-align: center;
         margin-bottom: 1rem;
+        background-color: transparent;
     }
 
     .header nav {
@@ -326,6 +328,10 @@ footer {
     .header nav a {
         margin-bottom: 0;
         margin-right: 2rem;
+    }
+
+    h1 {
+        background-color: black;
     }
 
     main > section {
@@ -375,6 +381,7 @@ footer {
         overflow-y: scroll;
         background-attachment: fixed;
         overflow-x: auto;
+        background-color: black;
     }
 
     .header {
@@ -412,7 +419,7 @@ footer {
     #work .app-section {
         flex-basis: calc(50% - 1rem);
         height: 40vh;
-        margin: 0.5rem;
+        /* margin: 0.5rem; */
         margin-bottom: 5rem;
     }
 
