--- a/css/style.css
+++ b/css/style.css
@@ -296,8 +296,8 @@ footer {
         min-height: 100vh;
         background-color: black;
         background-image: url('../images/sky.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
+        background-repeat: repeat;
+        background-size: contain;
         background-position: center;
         background-attachment: fixed;
         font-size: 14px;
@@ -313,8 +313,7 @@ footer {
         align-items: center;
         justify-content: center;
         text-align: center;
-        margin-bottom: 1rem;
-        background-color: transparent;
+        /* margin-bottom: 1rem; */
     }
 
     .header nav {
@@ -330,9 +329,6 @@ footer {
         margin-right: 2rem;
     }
 
-    h1 {
-        background-color: black;
-    }
 
     main > section {
         padding: 1rem;
